import { git } from "@roka/git";
import { tempRepository } from "@roka/git/testing";
import { fakeRepository } from "@roka/github/testing";
import { fakeArgs, fakeConsole, fakeEnv } from "@roka/testing/fake";
import { assertExists } from "@std/assert";
import { common, join } from "@std/path";
import { assertSnapshot } from "@std/testing/snapshot";
import { forge } from "./forge.ts";
import { tempWorkspace, type TempWorkspaceOptions } from "./testing.ts";

const WORKSPACE: TempWorkspaceOptions = {
  configs: [
    {
      name: "@scope/name1",
      version: "1.0.0",
      exports: { ".": "./name2.ts", "./main": "./main.ts" },
      forge: { main: "main.ts", target: ["aarch64-unknown-linux-gnu"] },
    },
    { name: "@scope/name2", version: "2.0.0", exports: "./name1.ts" },
    { name: "@scope/name3", version: "3.0.0" },
    { name: "@scope/name4", version: "4.0.0" },
    { name: "@scope/dir/name5", version: "0.0.0" },
    { name: "@scope/dir/name6" },
  ],
  commits: [
    { subject: "initial", tags: ["name1@1.0.0-pre.1", "name4@4.0.0"] },
    { subject: "feat(name2): name2", tags: ["name2@1.0.0"] },
    { subject: "fix(name1): bug", tags: ["name2@2.0.0"] },
    { subject: "refactor(name2): rewrite" },
    { subject: "feat(name2): feature", tags: ["name3@2.0.0"] },
    { subject: "docs(name3): fix typo" },
    { subject: "refactor(name4)!: redesign api" },
    { subject: "style(name5): tabs over spaces" },
  ],
};

async function run(context: Deno.TestContext) {
  await using remote = await tempRepository();
  await remote.commit.create({ subject: "initial", allowEmpty: true });
  await using packages = await tempWorkspace({
    ...WORKSPACE,
    repo: { clone: remote.path(), chdir: true },
  });
  assertExists(packages[0]);
  const pkg = packages[0];
  const root = common(packages.map((pkg) => pkg.root));
  const repo = fakeRepository({ git: git({ directory: root }) });
  await Deno.writeTextFile(
    join(pkg.directory, "main.ts"),
    "console.log('Hello, World!');",
  );
  using _args = fakeArgs(
    context.name
      .replaceAll("[packages...]", packages.map((pkg) => pkg.name).join(" "))
      .split(" ").slice(1)
      .map((arg) =>
        arg.replaceAll("[package]", pkg.name)
          .replaceAll("[pattern]", "name*")
          .replaceAll("[directory]", "dir")
          .replaceAll("[unknown]", "unknown")
          .replaceAll("<file>", join(root, "CHANGELOG.md"))
          .replaceAll("<types>", "fix,feat")
          .replaceAll("<target>", "aarch64-unknown-linux-gnu")
          .replaceAll("<unscoped>", "fix: bug")
          .replaceAll("<scoped>", "fix(name1): bug")
          .replaceAll("<unknown>", "fix(unknown): bug")
      ).flat(),
  );
  using _env = fakeEnv({ GITHUB_TOKEN: "token" });
  using console = fakeConsole();
  const code = await forge({ repo });
  return {
    code,
    // deno-lint-ignore no-console
    output: console
      .output({ stripAnsi: true, stripCss: true, trimEnd: true, wrap: "\n" })
      .replace(/(?<=\n)((?:.*?):\s*)\d+(\.\d+)+(?:.*)?/g, "$1<version>")
      .replace(/(?<=(\d+\.\d+\.\d+-\w+\.\d+)\+)(.......)/g, "<hash>")
      .replaceAll(root, "<directory>"),
  };
}

async function test(t: Deno.TestContext) {
  await assertSnapshot(t, await run(t));
}

Deno.test("forge --help", test);
Deno.test("forge list", test);
Deno.test("forge list --modules [packages...]", test);
Deno.test("forge list [pattern]", test);
Deno.test("forge list [directory]/*", test);
Deno.test("forge list [unknown]", test);
Deno.test("forge changelog", test);
Deno.test("forge changelog --all --emoji", test);
Deno.test("forge changelog --types <types>", test);
Deno.test("forge changelog --types <types> --no-breaking --all", test);
Deno.test("forge changelog --breaking --markdown", test);
Deno.test("forge changelog [unknown]", test);
Deno.test("forge compile --target <target> --bundle --install", test);
Deno.test("forge compile [unknown]", test);
Deno.test("forge bump --release --pr --changelog=<file> --emoji", test);
Deno.test("forge bump [unknown]", test);
Deno.test("forge release --draft --emoji", test);
Deno.test("forge release [unknown]", test);
Deno.test("forge title <unscoped>", test);
Deno.test("forge title <scoped>", test);
Deno.test("forge title <unknown>", test);
Deno.test("forge title <scoped> --types <types>", test);
