export const snapshot = {};

snapshot[`forge --help 1`] = `
{
  code: 1,
  output: "

Usage:   forge <command> [options] [packages...]
Version: <version>

deno: <version>
v8: <version>
typescript: <version>

Description:

  🛠️  forge

  A Deno monorepo tool that manages packages on GitHub and JSR, including
  versioning, releases, and compilation. It works on a git repository using
  Conventional Commits.

Options:

  -h, --help     - Show this help.
  -V, --version  - Show the version number for this program.

Commands:

  list       [packages...]  - List packages and versions.
  title      <title>        - Validate pull request titles.
  changelog  [packages...]  - Generate changelogs.
  compile    [packages...]  - Compile packages into binary executables.
  bump       [packages...]  - Bump versions on package config files.
  release    [packages...]  - Creates releases for updated packages.

Examples:

  forge                                 List all packages.
  forge list 'core/*'                   List packages in the 'core' directory.
  forge title 'feat(name): description' Validate PR titles.
  forge changelog --markdown            Generate changelog.
  forge compile --install               Compile and install all binaries.
  forge bump --pr                       Bump versions and create a bump PR.
  forge release --draft                 Create releases with compiled assets.

❌ Test case attempted to exit with exit code: 0
",
}
`;

snapshot[`forge list 1`] = `
{
  code: 0,
  output: "
🚨 @scope/name1     0.0.0 👉 1.0.0
📦 @scope/name2     2.1.0-pre.1+<hash>
🚨 @scope/name3     2.0.0 👉 3.0.0
📦 @scope/name4     5.0.0-pre.1+<hash>
📦 @scope/dir/name5 0.0.0
📦 @scope/dir/name6
",
}
`;

snapshot[`forge list --modules [packages...] 1`] = `
{
  code: 0,
  output: "
🚨 @scope/name1     0.0.0 👉 1.0.0

  🧩 (default)      <directory>/name1/name2.ts
  🧩 main           <directory>/name1/main.ts

📦 @scope/name2     2.1.0-pre.1+<hash>

  🧩 (default)      <directory>/name2/name1

🚨 @scope/name3     2.0.0 👉 3.0.0
📦 @scope/name4     5.0.0-pre.1+<hash>
📦 @scope/dir/name5 0.0.0
📦 @scope/dir/name6
",
}
`;

snapshot[`forge list [pattern] 1`] = `
{
  code: 0,
  output: "
🚨 @scope/name1     0.0.0 👉 1.0.0
📦 @scope/name2     2.1.0-pre.1+<hash>
🚨 @scope/name3     2.0.0 👉 3.0.0
📦 @scope/name4     5.0.0-pre.1+<hash>
📦 @scope/dir/name5 0.0.0
📦 @scope/dir/name6
",
}
`;

snapshot[`forge list [directory]/* 1`] = `
{
  code: 0,
  output: "
📦 @scope/dir/name5 0.0.0
📦 @scope/dir/name6
",
}
`;

snapshot[`forge list [unknown] 1`] = `
{
  code: 0,
  output: "
📦 No packages found: unknown
",
}
`;

snapshot[`forge changelog 1`] = `
{
  code: 0,
  output: "
🏷️  name1@1.0.0

  fix(name1): bug

🏷️  name2@2.1.0-pre.1+<hash>

  feat(name2): feature
  refactor(name2): rewrite

🏷️  name3@3.0.0

  docs(name3): fix typo

🏷️  name4@5.0.0-pre.1+<hash>

  refactor(name4)!: redesign api

🏷️  name5@0.0.0

  style(name5): tabs over spaces

",
}
`;

snapshot[`forge changelog --all --emoji 1`] = `
{
  code: 0,
  output: "
🏷️  name1@1.0.0

  🐛 bug

🏷️  name2@2.1.0-pre.1+<hash>

  ✨ feature
  ♻️ rewrite

🏷️  name2@1.0.0

  ✨ name2

🏷️  name3@3.0.0

  📝 fix typo

🏷️  name4@5.0.0-pre.1+<hash>

  ♻️ redesign api 💥

🏷️  name5@0.0.0

  🎨 tabs over spaces

",
}
`;

snapshot[`forge changelog --types <types> 1`] = `
{
  code: 0,
  output: "
🏷️  name1@1.0.0

  fix(name1): bug

🏷️  name2@2.1.0-pre.1+<hash>

  feat(name2): feature

🏷️  name4@5.0.0-pre.1+<hash>

  refactor(name4)!: redesign api

",
}
`;

snapshot[`forge changelog --types <types> --no-breaking --all 1`] = `
{
  code: 0,
  output: "
🏷️  name1@1.0.0

  fix(name1): bug

🏷️  name2@2.1.0-pre.1+<hash>

  feat(name2): feature

🏷️  name2@1.0.0

  feat(name2): name2

",
}
`;

snapshot[`forge changelog --breaking --markdown 1`] = `
{
  code: 0,
  output: "
## name4@5.0.0-pre.1+<hash>

- refactor(name4)!: redesign api

",
}
`;

snapshot[`forge changelog [unknown] 1`] = `
{
  code: 0,
  output: "
📦 No packages found: unknown
",
}
`;

snapshot[`forge compile --target <target> --bundle --install 1`] = `
{
  code: 0,
  output: "
📦 Compiled name1

  🏺 <directory>/dist/name1/1.0.0/aarch64-unknown-linux-gnu.tar.gz
  💾 Installed name1

",
}
`;

snapshot[`forge compile [unknown] 1`] = `
{
  code: 0,
  output: "
📦 No packages to compile: unknown
",
}
`;

snapshot[`forge bump --release --pr --changelog=<file> --emoji 1`] = `
{
  code: 0,
  output: "
🚀 Created bump pull request

  [<url>/pulls/1]

",
}
`;

snapshot[`forge bump [unknown] 1`] = `
{
  code: 0,
  output: "
📦 No packages to bump: unknown
",
}
`;

snapshot[`forge release --draft --emoji 1`] = `
{
  code: 0,
  output: "
🚀 Created release name1@1.0.0

  [<url>/releases/name1@1.0.0]

  🏺 aarch64-unknown-linux-gnu.tar.gz
  🏺 sha256.txt

🚀 Created release name3@3.0.0

  [<url>/releases/name1@1.0.0]

",
}
`;

snapshot[`forge release [unknown] 1`] = `
{
  code: 0,
  output: "
📦 No packages to release: unknown
",
}
`;

snapshot[`forge title <unscoped> 1`] = `
{
  code: 0,
  output: "

",
}
`;

snapshot[`forge title <scoped> 1`] = `
{
  code: 0,
  output: "

",
}
`;

snapshot[`forge title <unknown> 1`] = `
{
  code: 1,
  output: '
❌ Invalid PR scope: "unknown"

Allowed scopes:

  name1
  name1/main
  name2
  name3
  name4
  name5
  name6
',
}
`;

snapshot[`forge title <scoped> --types <types> 1`] = `
{
  code: 0,
  output: "

",
}
`;
